--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,19 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+#__next,
+body > div:first-child {
   max-width: 100%;
   overflow-x: hidden;
 }
